--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# python
 venv
 .venv
 .idea
@@ -24,3 +25,15 @@ archive.zip
 # vim temporary files
 *~
 .*.sw?
+
+# svelekit
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
