--- a/src/document-service/appsettings.json
+++ b/src/document-service/appsettings.json
@@ -5,5 +5,48 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "templateRoute": {
+        "ClusterId": "template",
+        "Match": {
+          "Path": "/template/{id}"
+        }
+      },
+      "swaggerRoute": {
+        "ClusterId": "template",
+        "Match": {
+          "Path": "/docs/{**catch-all}"
+        }
+      },
+      "documentRoute": {
+        "ClusterId": "document",
+        "Match": {
+          "Path": "/template/{id}/pdf"
+        },
+        "Transforms": [
+          {
+            "PathPattern": "/document/{id}/pdf"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "template": {
+        "Destinations": {
+          "destinationA": {
+            "Address": "http://127.0.0.1:8000"
+          }
+        }
+      },
+      "document": {
+        "Destinations": {
+          "destinationB": {
+            "Address": "http://localhost:5099"
+          }
+        }
+      }
+    }
+  }
 }
