html to latex to pdf/zip

--- a/src/document-service/src/appsettings.json
+++ b/src/document-service/src/appsettings.json
@@ -23,11 +23,11 @@
       "documentRoute": {
         "ClusterId": "document",
         "Match": {
-          "Path": "/template/{id}/pdf"
+          "Path": "/template/{id}/{ext}"
         },
         "Transforms": [
           {
-            "PathPattern": "/document/{id}/pdf"
+            "PathPattern": "/document/{id}/{ext}"
           }
         ]
       }
